// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/accounts/:account/reminders Reminders GET /:accountId/reminders should fetch all reminders for the account 1`] = `
Object {
  "entities": Object {
    "reminders": Object {
      "d5ab9bc0-f0e6-4538-99ae-2fe7f920abf4": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "customConfirmData": null,
        "dailyRunTime": null,
        "dontSendWhenClosed": false,
        "id": "d5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "ignoreSendIfConfirmed": false,
        "interval": "2 days",
        "isActive": true,
        "isConfirmable": true,
        "isCustomConfirm": false,
        "isDaily": false,
        "isDeleted": false,
        "lengthSeconds": null,
        "omitChairIds": Array [],
        "omitPractitionerIds": Array [],
        "primaryType": "email",
        "primaryTypes": Array [
          "sms",
        ],
      },
      "e5ab9bc0-f0e6-4538-99ae-2fe7f920abf4": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "customConfirmData": null,
        "dailyRunTime": null,
        "dontSendWhenClosed": false,
        "id": "e5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "ignoreSendIfConfirmed": false,
        "interval": "2 hours",
        "isActive": true,
        "isConfirmable": true,
        "isCustomConfirm": false,
        "isDaily": false,
        "isDeleted": false,
        "lengthSeconds": null,
        "omitChairIds": Array [],
        "omitPractitionerIds": Array [],
        "primaryType": "email",
        "primaryTypes": Array [
          "sms",
        ],
      },
    },
  },
}
`;

exports[`/api/accounts/:account/reminders Reminders POST /:accountId/reminders should create a reminders for the account 1`] = `
Object {
  "entities": Object {
    "reminders": Object {
      "f5ab9bc0-f0e6-4538-99ae-2fe7f920abf4": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "customConfirmData": null,
        "dailyRunTime": null,
        "dontSendWhenClosed": false,
        "id": "f5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "ignoreSendIfConfirmed": false,
        "interval": "2 hours",
        "isActive": true,
        "isConfirmable": true,
        "isCustomConfirm": false,
        "isDaily": false,
        "isDeleted": false,
        "lengthSeconds": null,
        "omitChairIds": Array [],
        "omitPractitionerIds": Array [],
        "primaryType": "email",
        "primaryTypes": Array [
          "sms",
        ],
      },
    },
  },
  "result": "f5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
}
`;

exports[`/api/accounts/:account/reminders Reminders PUT /:accountId/reminders/:reminderId should update a reminder for the account 1`] = `
Object {
  "entities": Object {
    "reminders": Object {
      "d5ab9bc0-f0e6-4538-99ae-2fe7f920abf4": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "customConfirmData": null,
        "dailyRunTime": null,
        "dontSendWhenClosed": false,
        "id": "d5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "ignoreSendIfConfirmed": false,
        "interval": "2 days",
        "isActive": true,
        "isConfirmable": true,
        "isCustomConfirm": false,
        "isDaily": false,
        "isDeleted": false,
        "lengthSeconds": null,
        "omitChairIds": Array [],
        "omitPractitionerIds": Array [],
        "primaryType": "email",
        "primaryTypes": Array [
          "phone",
        ],
      },
    },
  },
  "result": "d5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
}
`;
